--- a/manifest.json
+++ b/manifest.json
@@ -1,47 +1,44 @@
 {
-    "manifest_version": 3,
-    "name": "Facebook Group Data Collector",
-    "version": "1.0",
-    "description": "Collect and export data from your Facebook groups",
-    "permissions": ["storage", "activeTab", "scripting", "downloads"],
-    "host_permissions": ["https://*.facebook.com/*"],
-    "action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-        "16": "icons/icon16.png",
-        "48": "icons/icon48.png",
-       "128": "icons/icon128.png"
-      }
-    },
-    "background": {
-      "service_worker": "background.js"
-  },
-    "content_scripts": [
-      {
-        "matches": ["https://*.facebook.com/*"],
-        "js": ["content.js"],
-        "all_frames": true
-      }
-    ],
-    "icons": {
   "manifest_version": 3,
-  "name": "Facebook Navigator",
+  "name": "Facebook Group Data Collector",
   "version": "1.0",
-  "description": "Simple extension to navigate to Facebook",
-  "permissions": ["activeTab"],
+  "description": "Collect and export data from your Facebook groups",
+  "permissions": ["storage", "activeTab", "scripting", "downloads"],
+  "host_permissions": ["https://*.facebook.com/*"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-           "16": "icons/icon16.png",
-           "48": "icons/icon48.png",
-           "128": "icons/icon128.png"
-    }
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
     }
   },
-    "web_accessible_resources": [
-      {
-        "resources": ["icons/*"],
-        "matches": ["<all_urls>"]
-      }
-    ]
-  }
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://*.facebook.com/*"],
+      "js": ["lib/papaparse.min.js", "content.js"],
+      "all_frames": true
+    }
+  ],
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "icons/*",
+        "utility-module.js",
+        "storage-module.js",
+        "group-module.js",
+        "data-collection-module.js",
+        "ui-module.js"
+      ],
+      "matches": ["<all_urls>"]
+    }
+  ]
+}
