Refactor: Restructure modules and update file paths
- Deleted old module files: group-module.js, storage-module.js, ui-module.js, utility-module.js
- Added new module files under 'module/' directory: data-collection-module.js, group-module.js, storage-module.js, ui-module.js, utility-module.js
- Updated manifest.json and popup.js to reflect new module paths
- Enhanced data collection functionality in data-collection-module.js

--- a/manifest.json
+++ b/manifest.json
@@ -32,11 +32,11 @@
     {
       "resources": [
         "icons/*",
-        "utility-module.js",
-        "storage-module.js",
-        "group-module.js",
-        "data-collection-module.js",
-        "ui-module.js"
+        "module/utility-module.js",
+        "module/storage-module.js",
+        "module/group-module.js",
+        "module/data-collection-module.js",
+        "module/ui-module.js"
       ],
       "matches": ["<all_urls>"]
     }
