Refactor logging system: Introduce global logger and update console logger module
- Added a new global logger (global-logger.js) to capture console logs across all contexts.
- Updated console logger module (console-logger-module.js) to utilize the global logger for log entries.
- Modified popup.js to load the global logger and initialize the console logger UI.
- Cleaned up console method overrides and log entry handling in the console logger module.
- Enhanced log display functionality and added support for log listeners.
- Updated manifest.json to reflect new module paths and resources.

--- a/manifest.json
+++ b/manifest.json
@@ -33,12 +33,13 @@
     {
       "resources": [
         "icons/*",
-        "modmodule/ule/utility-module.js",
-        "module/module/storage-module.js",
-        "module/module/group-module.js",
-        "module/module/data-collection-module.js",
+        "module/utility-module.js",
+        "module/storage-module.js",
+        "module/group-module.js",
+        "module/data-collection-module.js",
         "module/ui-module.js",
-        "module/console-loggermodule/ui-module.js"
+        "module/global-logger.js",
+        "module/console-logger-module.js"
       ],
       "matches": ["<all_urls>"]
     }
