Refactor: Remove legacy modules and consolidate functionality
- Deleted data-collection-module.js, global-logger.js, group-module.js, storage-module.js, ui-module.js, utility-module.js to streamline the codebase.
- Introduced popup.css for centralized styling, replacing inline styles in popup.html.
- Updated popup.js to integrate new group processing logic and remove unnecessary logger initialization.
- Simplified UI interactions and improved user experience for group addition and data collection.

--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "name": "Facebook Group Data Collector",
   "version": "1.0",
   "description": "Collect and export data from your Facebook groups",
-  "permissions": ["storage", "activeTab", "scripting", "downloads"],
-  "host_permissions": ["https://*.facebook.com/*"],
+  "permissions": ["storage", "activeTab", "scripting", "downloads", "tabs"],
+  "host_permissions": ["https://*.facebook.com/*", "https://*.facebook.com/groups/*"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
