--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,16 @@
 {
   "manifest_version": 3,
-  "name": "Facebook Group Data Collector",
+  "name": "Facebook Group Collector",
   "version": "1.0",
-  "description": "Collect and export data from your Facebook groups",
-  "permissions": ["storage", "activeTab", "scripting", "downloads", "tabs", "contextMenus"],
-  "host_permissions": ["https://*.facebook.com/*", "https://*.facebook.com/groups/*"],
+  "description": "Extract usernames from Facebook group posts",
+  "permissions": [
+    "activeTab",
+    "scripting",
+    "storage"
+  ],
+  "host_permissions": [
+    "https://*.facebook.com/*"
+  ],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
@@ -13,29 +19,16 @@
       "128": "icons/icon128.png"
     }
   },
-  "background": {
-    "service_worker": "background.js"
-  },
-  "content_scripts": [
-    {
-      "matches": ["https://*.facebook.com/*"],
-      "js": ["lib/papaparse.min.js", "content.js"],
-      "all_frames": true
-    }
-  ],
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-  "web_accessible_resources": [
+  "content_scripts": [
     {
-      "resources": [
-        "icons/*",
-        "src/log-viewer.html",
-        "src/log-viewer.js"
-      ],
-      "matches": ["<all_urls>"]
+      "matches": ["https://*.facebook.com/*"],
+      "js": ["content.js"],
+      "run_at": "document_idle"
     }
   ]
 }
